--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -23,5 +23,13 @@ $theme-background-color: #f8fafc;
 $theme-scroll-color: #0c1519;
 $sidenav-active: #29292c;
 $line-color: #f0f0f0;
+$color-light-pink: #fff2f2;
+$color-dark-pink: #ff1c3d;
+$color-input-border: #e4e4e7;
+$color-input-placeholder: #71717a;
 $theme-background-color-auth: #f8fafc;
 $theme-background-profile-color: #f2f2f252;
+$theme-author-container-color: #F4F4F5; 
+$theme-author-circle-color: #D9D9D9;
+$theme-agency-container-color: #FF6868F5;
+$theme-agency-button-color: #FF516A;
