--- a/src/assets/scss/_component.scss
+++ b/src/assets/scss/_component.scss
@@ -165,3 +165,300 @@
         margin-right: 8px;
     }
 }
+
+// coin admin center
+.admin-card-container {
+    // display: flex;
+    // align-items: center;
+    .admin-card-box {
+        display: flex;
+        align-items: center;
+        .admin-card-image-box {
+            height: 54px;
+            width: 54px;
+            border-radius: 54px;
+            background-color: #D9D9D9;
+            margin-right: 15px;
+            .admin-card-image {
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+                border-radius: 54px;
+            }
+        }
+        
+        .admin-card-content-box {
+            
+            .title {
+                line-height: 20.16px;
+                font-size: 16px;
+                font-weight: 700;
+                margin-bottom: 5px;
+            }
+            .description {
+                line-height: 17.64px;
+                font-size: 14px;
+                font-weight: 400;
+            }
+        }
+    }
+}
+
+.author-container {
+    padding: 4px;
+    background-color: $theme-author-container-color;
+    border-radius: 30px;
+    min-width: 154px;
+    display: inline-flex;
+    align-items: center;
+    .author-circle {
+        height: 24px;
+        width: 24px;
+        border-radius: 24px;
+        background-color: $theme-author-circle-color;
+        margin-right: 5px;
+    }
+    .author-type {
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 15.12px;
+        margin-right: 5px;
+    }
+    .author-name {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15.12px;
+        margin-right: 5px;
+    }
+}
+
+.agency-container {
+    padding: 4px 10px;
+    background-color: $theme-author-container-color;
+    border-radius: 30px;
+    min-width: 130px;
+    display: inline-flex;
+    align-items: center;
+    
+    .agency-box {
+        background-color: $theme-agency-container-color;
+        border-radius: 30px;
+        padding: 5px 8px;
+        width: 100%;
+        display: inline-flex;
+        align-items: center;
+        .agency-type {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 15.12px;
+            margin-right: 5px;
+            color: $color-white;
+        }
+        .agency-name {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 15.12px;
+            color: $color-white;
+        }
+    }
+}
+
+// current date
+.current-date-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    .current-date {
+        font-size: 16px;
+        line-height: 20.16px;
+        font-weight: 700;
+    }
+    .calender-image {
+        width: 22px;
+        height: 22px;
+        object-fit: contain;
+    }
+}
+
+// income card
+.income-card-container {
+    .income-card-image-box {
+        height: 49px;
+        width: 49px;
+        border-radius: 11px;
+        background-color: $color-white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 15px;
+        .income-card-image {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+            border-radius: 54px;
+        }
+    }
+    
+    .income-card-content-box {
+        .title {
+            line-height: 20.16px;
+            font-size: 16px;
+            font-weight: 700;
+            margin-bottom: 5px;
+        }
+        .description {
+            line-height: 17.64px;
+            font-size: 14px;
+            font-weight: 400;
+        }
+    }
+}
+
+// search bar
+.search-container {
+    background-color: $color-white;
+    padding: 0 15px;
+    border-radius: 13px;
+    border: 1px solid $color-input-border;
+    display: flex;
+    align-items: center;
+
+    .icon {
+        width: 20;
+        height: 20;
+        object-fit: contain;
+        margin-bottom: 0;
+    }
+
+    /* Custom Input Styles */
+    .custom-input {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17.64px;
+        color: $color-black;
+    }
+    
+    /* Placeholder Styling */
+    .custom-input::placeholder {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17.64px;
+        color: $color-input-placeholder;
+    }
+    
+    .custom-input:focus::placeholder {
+        color: $color-black;
+    }
+}
+
+// team card
+.team-card-container {
+    border-radius: 15px;
+
+    .team-card-box {
+        display: flex;
+        align-items: center;
+        // margin-bottom: 13px;
+        .team-card-image-box {
+            height: 54px;
+            width: 54px;
+            border-radius: 54px;
+            background-color: #D9D9D9;
+            margin-right: 10px;
+            .team-card-image {
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+                border-radius: 54px;
+            }
+        }
+        
+        .team-card-content-box {
+            display: flex;
+            align-items: center;
+            flex: 1;
+            .title {
+                line-height: 20.16px;
+                font-size: 16px;
+                font-weight: 700;
+                margin-bottom: 5px;
+                .verified {
+                    width: 20px;
+                    height: 20px;
+                    object-fit: contain;
+                    margin-left: 5px;
+                    position: relative;
+                    bottom: 2px;
+                }
+                
+            }
+            .description {
+                line-height: 17.64px;
+                font-size: 14px;
+                font-weight: 400;
+                .document-copy {
+                    width: 15px;
+                    height: 15px;
+                    object-fit: contain;
+                    position: relative;
+                    bottom: 2px;
+                }
+            }
+            
+        }
+    }
+
+    .action-container {
+        margin-left: auto;
+        .action {
+            background-color: $theme-agency-button-color;
+            border: 0;
+            border-radius: 30px;
+            min-width: 123px;
+            min-height: 38px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 14px;
+            line-height: 17.64px;
+            font-weight: 700;
+        }
+    }
+
+    .operation-container {
+        display: flex;
+        flex-grow: 1;
+        margin-left: auto;
+        justify-content: flex-end;
+        gap: 50px;
+        .operation {
+            background-color: transparent;
+            border: 0;
+            padding: 0;
+
+        }
+    }
+}
+
+// hosts
+.host-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    .host-title {
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 25.2px;
+        color: $color-black;
+    }
+    .host-image {
+        width: 20px;
+        height: 20px;
+    }
+    .host-description {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 17.64px;
+        color: $color-black;
+    }
+}
