--- a/src/assets/scss/_pages.scss
+++ b/src/assets/scss/_pages.scss
@@ -20,31 +20,53 @@
     height: calc(100% - 14px);
 }
 
-// coin admin center
-.admin-card-container {
+
+
+.admin-tabs {
+    border: 0;
     display: flex;
-    align-items: center;
-    .admin-card-image-box {
-        height: 54px;
-        width: 54px;
-        border-radius: 54px;
-        background-color: #D9D9D9;
-        margin-right: 15px;
-    }
-    
-    .admin-card-content-box {
-        
-        .title {
-            line-height: 20.16px;
-            font-size: 16px;
-            font-weight: 700;
-            
-        }
-        .description {
-            line-height: 17.64px;
-            font-size: 14px;
+    gap: 28px;
+    .nav-item {
+        flex-grow: 1;
+        .nav-link {
+            border: 0;
+            background-color: $color-light-pink;
+            font-size: 13px;
+            line-height: 16.38px;
             font-weight: 400;
+            color: $color-black;
+            width: 100%;
+            border-radius: 10px;
+            padding: 13.5px 0;
+            &.active {
+                background-color: $color-dark-pink;
+                color: $color-white;
+            }
         }
     }
 }
 
+.agency-tabs {
+    border: 0;
+    display: flex;
+    // gap: 28px;
+    .nav-item {
+        flex-grow: 1;
+        padding: 0 15px;
+        .nav-link {
+            border: 0;
+            background-color: $color-white;
+            font-size: 13px;
+            line-height: 16.38px;
+            font-weight: 700;
+            color: $color-black;
+            width: 100%;
+            border-radius: 30px;
+            padding: 20px 0;
+            &.active {
+                background-color: $color-dark-pink;
+                color: $color-white;
+            }
+        }
+    }
+}
